changes to make maven deploy automatically

--- a/astrogrid/applications/project.properties
+++ b/astrogrid/applications/project.properties
@@ -16,6 +16,7 @@ maven.repo.central=www.astrogrid.org
 maven.repo.central.directory=/var/www/www/maven
 maven.remote.group=cvs
 # for the war goal
+maven.repo.list=astrogrid
 maven.repo.astrogrid=file:///var/www/www/
 maven.repo.astrogrid.directory=maven
 maven.repo.astrogrid.username=maven
