--- a/astrogrid/applications/test/java/log4j.properties
+++ b/astrogrid/applications/test/java/log4j.properties
@@ -1,4 +1,4 @@
-# $Id: log4j.properties,v 1.5 2003/12/15 14:29:49 pah Exp $
+# $Id: log4j.properties,v 1.6 2003/12/15 15:54:53 pah Exp $
 # Author: JDT
 ############################################################################################
 #
@@ -25,7 +25,7 @@ log4j.appender.LOGFILE.layout.ConversionPattern=%-5p [%t] %c{1}/%L: %m%n
 log4j.rootCategory=DEBUG, CONSOLE, LOGFILE
 
 #switch the digester messages down... 
-log4j.logger.org.apache.commons.digester.Digester=DEBUG
-log4j.logger.org.apache.commons.beanutils=INFO
-log4j.logger.org.apache.axis=DEBUG
+log4j.logger.org.apache.commons.digester.Digester=OFF
+log4j.logger.org.apache.commons.beanutils=OFF
+log4j.logger.org.apache.axis=OFF
 
