--- a/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
+++ b/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
@@ -59,8 +59,8 @@ DefaultMySpace=http://uml01.astrogrid.org:8080/axis/services/MySpaceManager
 ###
 ### Workspace Configuration
 ###
-### Directory for temporary workspace : OPTIONAL
-### leave unspecified to use temporary storage
+### Directory for temporary workspace : REQUIRED
+### Default setting should work for unices. Needs to be altered for a Windows installation.
 ###
 WorkspaceDirectory=/tmp
 
