--- a/astrogrid/community/release/webapp/build.xml
+++ b/astrogrid/community/release/webapp/build.xml
@@ -2,11 +2,14 @@
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/community/release/webapp/Attic/build.xml,v $</cvs:source>
     | <cvs:author>$Author: dave $</cvs:author>
-    | <cvs:date>$Date: 2003/12/16 15:08:06 $</cvs:date>
-    | <cvs:version>$Revision: 1.2 $</cvs:version>
+    | <cvs:date>$Date: 2003/12/16 16:44:29 $</cvs:date>
+    | <cvs:version>$Revision: 1.3 $</cvs:version>
     | <cvs:log>
     |   $Log: build.xml,v $
-    |   Revision 1.2  2003/12/16 15:08:06  dave
+    |   Revision 1.3  2003/12/16 16:44:29  dave
+    |   Added deployment test data
+    |
+    |   Revision 1.1  2003/12/16 15:08:07  dave
     |   Updated the release jars
     |
     |   Revision 1.2  2003/12/16 12:46:35  dave
@@ -19,6 +22,16 @@
     |
     +-->
 <project default="init" basedir="." name="Community">
+
+    <!--+
+        | Configuration properties.
+        +-->
+    <!--+
+    <property name="tomcat.home"    value="/usr/java/servers/tomcat/jakarta-tomcat-4.1.24-LE-jdk14"/>
+    <property name="tomcat.home"    value="/usr/local/jakarta-tomcat-4.1.24"/>
+    +-->
+    <property name="tomcat.home"    value="/usr/java/servers/tomcat/jakarta-tomcat-4.1.24-LE-jdk14"/>
+    <property name="community.name" value="test.astrogrid.org"/>
 
     <!--+
         | The project name, used for our jar file names.
@@ -75,7 +88,6 @@
     <!--+
         | Tomcat properties.
         +-->
-    <property name="tomcat.home"    value="/usr/java/servers/tomcat/jakarta-tomcat-4.1.24-LE-jdk14"/>
     <property name="tomcat.host"    value="localhost"/>
     <property name="tomcat.port"    value="8080"/>
     <property name="tomcat.server"  value="${tomcat.host}:${tomcat.port}"/>
@@ -354,6 +366,26 @@
             ]]>
         </sql>
     </target>
+
+    <!--+
+        | Run our policy loader task.
+        +-->
+    <target name="policy.loader" depends="">
+        <echo message=""/>
+        <echo message="Loading policy data ...."/>
+        <echo message="  Community name : ${community.name}"/>
+        <!-- Define our policy-loader task -->
+        <taskdef name="policy.loader" classname="org.astrogrid.community.policy.loader.PolicyLoader">
+            <classpath refid="config.classpath"/>
+        </taskdef>
+        <!-- Process our data files -->
+        <policy.loader>
+            <fileset dir="${project.home}/config">
+                <include name="${community.name}.xml"/>
+            </fileset>
+        </policy.loader>
+    </target>
+
 
 </project>
 
